--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portfolio",
-  "homepage": "https://krunal15panchal.github.io/Dr-Sanjana/",
+  "homepage": "https://krunal15panchal.github.io/Dr-Sanjana",
   "private": true,
   "version": "0.0.0",
   "type": "module",
